--- a/src/main/webapp/WEB-INF/views/thymeleaf/actividadesFisicas.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/actividadesFisicas.html
@@ -26,7 +26,7 @@
     </div>
 </div>
 
-<div class="container">
+<div class="container-fluid my-5" style="min-height: 60vh;">
     <div class="bloqueBusqueda">
         <div class="advise">
             <p>¿Sabías que el ejercicio físico no solo fortalece tus músculos, sino también tu cerebro?</p>
@@ -56,7 +56,7 @@
     </div>
 </div>
 
-    <div class="espacio"></div>
+
 </div>
 
 <!-- Footer -->
