--- a/src/main/webapp/WEB-INF/views/thymeleaf/notificaciones.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/notificaciones.html
@@ -24,7 +24,7 @@
     <div th:replace="navbar :: navbar"></div>
     
     <!--notificaciones-->
-    <div class="container my-5">
+    <div class="container my-5" style="min-height: 60vh;">
         <h2 class="text-center text-dark">Mis Notificaciones</h2>
         <div class="mt-4 p-5 text-dark rounded" th:style="'background-image: url(\'' + @{/img/background.png} + '\'); background-size: cover;'">
             <h3 class="text-white">Advertencia: </h3>
