--- a/src/main/webapp/WEB-INF/views/thymeleaf/alimentos.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/alimentos.html
@@ -32,15 +32,16 @@
         </div>
     </div>
 </div>
-<div class="container mt-4">
+
+    <div class="container-fluid my-5" style="min-height: 60vh;">
     <div>
         <div class="conEncabezado">
             <div class="conTitulo"> <!--Titulo -->
                 <h1>Alimentos</h1>
                 <p>Encuentra alimentos de sus marcas favoritas</p>
             </div>
-            <div class="contenedor-busqueda">
-                <label class="buscar-receta"> Encuentra el alimento que buscas!
+            <div class="contenedor-busqueda d-flex justify-content-center align-items-center">
+            <label class="buscar-receta"> Encuentra el alimento que buscas!
                     <div>
                         <input class="busqueda-alimento" name="busqueda-alimento" type="text">
                         <button type="submit">buscar</button>
