agregando recetas Version beta

--- a/src/main/webapp/WEB-INF/views/thymeleaf/miDiario.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/miDiario.html
@@ -12,7 +12,7 @@
 <body>
 <div th:replace="navbar :: navbar"></div>
 
-<div class="container mt-4">
+<div class="container mt-4" style="min-height: 80vh;">
     <h1 class="text-center m-5">Mi diario de comida</h1>
     <div class="row">
         <!-- Columna para los contenedores de Desayuno, Almuerzo, etc. -->
