--- a/src/main/webapp/WEB-INF/views/thymeleaf/diarioEjercicio.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/diarioEjercicio.html
@@ -5,15 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <title>Diario De Ejercicio</title>
-    <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.2.0/css/bootstrap.min.css}"/>
-    <link rel="stylesheet" th:href="@{/css/main.css}"/>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.3.3/css/bootstrap.min.css}">
+    <link rel="stylesheet" th:href="@{/css/main.css}">
+
+    <!--bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
 
 
 </head>
 <body>
+
 <div th:replace="navbar :: navbar"></div>
-<div class="container center" style="margin-top: 50px;">
+
+
+<div class="container center" style="min-height: 80vh; margin-top: 50px;">
     <div class="row justify-content-center">
         <!-- Columna de la tarjeta -->
         <div class="col-md-6">
@@ -45,7 +52,5 @@
 
 <div th:replace="footer ::footer"></div>
 </body>
+</html>
 
-</html>
-</body>
-</html>
