--- a/src/main/webapp/WEB-INF/views/thymeleaf/inicio.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/inicio.html
@@ -23,7 +23,7 @@
     <nav class="navbar navbar-expand-sm" style="background-color: #ffffff;">
         <div class="container-fluid">
             <a class="navbar-brand" th:href="@{#}">
-                <h1 class="display-3" style="color: #5FB92E"><img th:src="@{/img/logo.png}" alt="logo" height="120px">   fatloss</h1>
+                <h1 class="display-3" style="color: #5FB92E; font-weight: bold;"><img th:src="@{/img/logo.png}" alt="logo" height="120px">   fatloss</h1>
             </a>
         </div>
     </nav>
