--- a/src/main/webapp/WEB-INF/views/thymeleaf/footer.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/footer.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div th:fragment="footer">
-<footer class="container-fluid mt-auto py-2">
+<footer class="container-fluid mt-auto mt-2">
     <div class="row d-flex align-items-center">
         <div class="col-sm-2 d-flex justify-content-center justify-content-sm-end justify-content-md-end
             justify-content-lg-end justify-content-xl-end justify-content-xxl-end py-2">
