--- a/src/main/webapp/WEB-INF/views/thymeleaf/formulario-registro.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/formulario-registro.html
@@ -71,11 +71,9 @@
                 <input type="number" class="form-control" id="peso" th:field="*{peso}" required> kg
             </div>
             <div class="form-group">
-                <label for="meta_alcanzar">¿Cuál es su meta a alcanzar</label><br>
+                <label for="meta_alcanzar">¿Cuál es tu peso ideal?</label><br>
                 <select class="form-control" id="meta_alcanzar" th:field="*{metaAlcanzarPeso}" required>
-                    <option value="bajar" th:value="bajar">Bajar de peso</option>
-                    <option value="mantener" th:value="mantener">Mantener peso</option>
-                    <option value="subir" th:value="subir">Subir de peso</option>
+                   <input type="number" class="form-control" id="peso" th:field="*{metaAlcanzarPeso}" required> kg
 
                 </select>
             </div>
