--- a/src/main/webapp/WEB-INF/views/thymeleaf/formulario-registro.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/formulario-registro.html
@@ -72,12 +72,7 @@
             </div>
             <div class="form-group">
                 <label for="meta_alcanzar">¿Cuál es su meta a alcanzar</label><br>
-                <select class="form-control" id="meta_alcanzar" th:field="*{metaAlcanzarPeso}" required>
-                    <option value="bajar" th:value="bajar">Bajar de peso</option>
-                    <option value="mantener" th:value="mantener">Mantener peso</option>
-                    <option value="subir" th:value="subir">Subir de peso</option>
-
-                </select>
+                   <label for="meta_alcanzar" th:field="*{metaAlcanzarPeso}">Peso Actual:</label><br>
             </div>
             <div class="form-group">
                 <label for="altura">Altura:</label><br>
