--- a/src/main/webapp/WEB-INF/views/thymeleaf/navbar.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/navbar.html
@@ -9,7 +9,7 @@
 <div th:fragment="navbar">
 <nav class="navbar navbar-expand-sm navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" th:href="@{/menuprincipal}">
+        <a class="navbar-brand" th:href="@{/home}">
             <h1 class="display-3" style="font-weight: bold;"><img th:src="@{/img/logo_bg-color.png}" alt="logo" height="120px">fatloss</h1>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
